--- a/src/components/main.css
+++ b/src/components/main.css
@@ -95,9 +95,10 @@ form {
 	outline-width: 0px;
 	text-rendering: optimizelegibility;
 	text-size-adjust: 100%;
-	width: 100%;
 	height: 100%;
-	max-width: 557px;
+	min-width: 400px;
+	width: 90vw;
+	max-width: 800px;
 	-webkit-font-smoothing: antialiased;
 }
 
