--- a/src/main.css
+++ b/src/main.css
@@ -270,6 +270,7 @@ form {
 .success-container {
 	height: 100vh;
 	width: 100vw;
+	padding-top: 2rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -277,7 +278,7 @@ form {
 }
 .success-image {
 	width: 95vw;
-	max-width: 400px;
+	max-width: 300px;
 	
 }
 .success-text {
