--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "meister-regular";
+    src: url("https://www.jagermeister.com/client/273590e317a7769397c4cd9afea27bcd.woff") format('woff');
+}
+
+
+
 html {
 	box-sizing: border-box;
 
@@ -112,6 +119,7 @@ form {
 	margin: 2rem 0;
 	display: block;
 	font-size: 2rem;
+	line-height: 2rem;
 	text-transform: uppercase;
 }
 
@@ -275,6 +283,7 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background: rgba(40, 71, 12, 0.5);
 }
 .success-image {
 	width: 95vw;
