--- a/src/main.css
+++ b/src/main.css
@@ -279,6 +279,11 @@ form {
 	border: 2px solid rgb(221, 90, 18);
 }
 
+.link {
+	color: rgb(233, 227, 199);
+	font-weight: 700;
+}
+
 .success-container {
 	height: 100vh;
 	width: 100vw;
